@@ -81,6 +81,7 @@
 "META_PUBLISHER_help";"~#gm_lang[META_PUBLISHER]#~<br /><br />The value to place in the Publisher meta tag in the HTML page header.  Leave this field empty to use the full name of the #gm_lang[CONTACT_EMAIL]#.<br /><br />This sets $META_PUBLISHER.<br />"
 "META_REVISIT_help";"~#gm_lang[META_REVISIT]#~<br /><br />The value to place in the Revisit meta tag in the HTML page header.  Some web crawlers ignore this value.<br /><br />This sets $META_REVISIT.<br />"
 "META_ROBOTS_help";"~#gm_lang[META_ROBOTS]#~<br /><br />Genmod will add this meta tag to the page header, and will follow the access provided in robots.txt. For each user agent group, one tag line will be generated.<br />Once access is not blocked by robots.txt, the value entered here will be added to the tag.  Some robots or web crawlers ignore this value.<br /><br />This sets $META_ROBOTS.<br />"
+"META_ROBOTS_DENY_help";"~#gm_lang[META_ROBOTS_DENY]#~<br /><br />Genmod will add this meta tag to the page header, and will follow the access provided in robots.txt. For each user agent group, one tag line will be generated.<br />Once access is blocked by robots.txt, the value entered here will be added to the tag.  Some robots or web crawlers ignore this value.<br /><br />This sets $META_ROBOTS_DENY.<br />"
 "META_SURNAME_KEYWORDS_help";"~#gm_lang[META_SURNAME_KEYWORDS]#~<br /><br />With this option set to <b>Yes</b> the surnames from the #gm_lang[common_surnames]# list will be added to the Keywords meta field.  This can help search engines better find your site.<br /><br />This sets $META_SURNAME_KEYWORDS.<br />"
 "META_TITLE_help";"~#gm_lang[META_TITLE]#~<br /><br />Anything on this line will be added to the TITLE tag in the HTML page header after the regular page title and before the Genmod credit.<br /><br />This sets $META_TITLE.<br />"
 "NEWS_TYPE_help";"~#gm_lang[NEWS_TYPE]#~<br /><br />On the Admin page, you will see news from the Genmod team appear. Here you can set the type of news that will be displayed:<br /><b>Normal: </b>All news will be shown<br /><b>Urgent: </b>Only urgent news like announcements for security patches will he displayed.<br /><br />This sets $NEWS_TYPE in the <i>system configuration</i>.<br />"
